ci-cd-ecommerce-tiran/k8s/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiran-app
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tiran-app
  template:
    metadata:
      labels:
        app: tiran-app
    spec:
      containers:
        - name: tiran-app
          image: docker.io/wolfix1245/tiran:1.3
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "1000Mi"         # 2 × 500m CPU = 1Gi
              cpu: "500m"
              ephemeral-storage: "500Mi"
            limits:
              memory: "2000Mi"         # 2 × 1000m CPU = 2Gi
              cpu: "1000m"
              ephemeral-storage: "500Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: tiran-service
  namespace: production
spec:
  selector:
    app: tiran-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
